# SW_WaterIrrigationController_esp32

./: .gitmodules  CMakeLists.txt  LED_INDICATOR_SYSTEM.md  README.md  WEBSERVICE_REFACTOR_SUMMARY.md  partitions.csv  sdkconfig  sdkconfig.old
.github/: DEVICE_COMMUNICATION.md  cpp_concepts.instructions.md  namingconvetioncpp.instructions 2.md
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  application.cpp  application.h  application.hpp
src/asw_cfg/: CMakeLists.txt  build_version.hpp  fw_version.hpp  global_credentials.cpp  global_credentials.hpp  home_assistant_cfg.hpp  mqtt_runtime_config.cpp  mqtt_runtime_config.hpp  operating_mode_config.cpp  operating_mode_config.hpp  shift_register_cbk.c
src/bsw_cfg/: CMakeLists.txt  bsw_cfg.hpp  gpio_cfg.cpp  uart_cfg.cpp
src/cloud/: device_claim_client.cpp  device_claim_client.hpp  home_assistant_mqtt_bridge.cpp  home_assistant_mqtt_bridge.hpp  server_sync_client.cpp  server_sync_client.hpp  webservice_api.cpp  webservice_api.hpp
src/command_handling/: CMakeLists.txt  ca_bsw_esp32.cpp  ca_bsw_esp32.hpp  comm_manager.hpp  dispatcher.hpp
src/local_mode/: local_mode_scheduler.cpp  local_mode_scheduler.hpp  local_mode_store.cpp  local_mode_store.hpp  local_mode_types.hpp  local_mode_web.cpp  local_mode_web.hpp
tools/: increment_build_version.cmake
